<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/img_login_wave"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="@id/image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="249dp"
        android:layout_height="145dp"
        android:src="@drawable/img_logo_cmc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="358dp"
        android:layout_height="518dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="22dp"
        android:background="@drawable/shape_login_form"
        android:elevation="10dp"
        app:layout_constraintTop_toBottomOf="@+id/image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="222dp"
            android:layout_height="41dp"
            android:text="@string/se_connecter"
            android:textStyle="bold"
            android:textColor="@color/grayedGreen"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:textSize="34sp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:hint="@string/address_email"
                android:drawableStart="@drawable/icon_user"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:layout_centerHorizontal="true"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:drawableStart="@drawable/icon_key"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:layout_centerHorizontal="true"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        
        <Button
            android:id="@+id/login_button"
            android:layout_width="290dp"
            android:layout_height="51dp"
            app:backgroundTint="@color/main_green_color"
            android:background="@drawable/shape_button_login"
            android:text="@string/se_connecter"
            android:textStyle="normal"
            android:textSize="20sp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="167dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:text="@string/forgot_password"
            android:textColor="#727272"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
